Bug 693039 - Memento seg faults on various test files
Summary: Memento seg faults on various test files
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Test Framework (show other bugs)
Version: master
Hardware: Macintosh MacOS X
: P4 normal
Assignee: Robin Watts
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-14 18:15 UTC by Marcos H. Woehrmann
Modified: 2012-05-15 17:26 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2012-05-14 18:15:26 UTC
While working on adding leak detection to the nightly regression tests I found that the memento build seg faults on a several of the input test files with the 64 bit Mac OS X build, e.g.:

  membin/gs -sDEVICE=ppmraw -o test.ppm ./z400454b01d4-1.pdf

This is a regression, having started with dd09a0706ab09a54f5fbb05c63420c86375b45bf.
Comment 1 Robin Watts 2012-05-15 17:26:39 UTC
Fixed in:


commit b549f7df132df28783e34ef6839812b691c9eed5
Author: Robin Watts <robin.watts@artifex.com>
Date:   Tue May 15 18:22:06 2012 +0100

    Bug 693039: Fix Memento crashes

    After reallocing a block, it is best to avoid reading from the old
    location. (Read flags, then realloc, then write flags).

    Also some minor tweaks to avoid warnings etc.