Bug 693039: Fix Memento crashes

After reallocing a block, it is best to avoid reading from the old
location. (Read flags, then realloc, then write flags).

Also some minor tweaks to avoid warnings etc.